--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nuxt": "3.0.0-rc.8"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.2"
+    "@nuxtjs/tailwindcss": "^5.3.2",
+    "axios": "^0.27.2"
   }
 }
